Fixed weather list right align margin

--- a/src/components/WeatherList.css
+++ b/src/components/WeatherList.css
@@ -34,7 +34,7 @@
 {
     margin-top: auto;
     margin-bottom: auto;
-    margin-right: 1.5em;
+    margin-right: 1em;
     font-weight: normal;
     text-shadow: 0px 0px 4px rgba(255, 255, 255, 0.3);
 }
@@ -52,7 +52,7 @@
 {
     margin-top: auto;
     margin-bottom: auto;
-    margin-right: 1.5em;
+    margin-right: 1em;
     font-weight: normal;
     color:darkgray;
     text-shadow: 0px 0px 4px rgba(169, 169, 169, 0.3);
